<?xml version="1.0"?>
<package format="2">
  <name>habitat_sim_ros</name>
  <version>0.0.1</version>
  <description>The habitat_sim_ros package</description>
  <maintainer email="wgw@todo.todo">wgw</maintainer>
  <license>MIT</license>
  <url type="repository">http://github.com/wgw101/habitat_sim_ros</url>
  <author email="guillaume.bono@insa-lyon.fr">Guillaume Bono</author>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <export>
  </export>
</package>
